<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="main.dettrans.hacks.kwasi.com.detroithealthtransys.LogInActivity">


    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="51dp"
        android:textSize="18sp" />

    <CheckBox
        android:text="@string/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_marginBottom="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/logininformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/facebook_login_button"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:textSize="18sp"
        android:layout_weight="1"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/sign_in_button"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username"
        android:textAlignment="center"
        android:elevation="1dp"
        android:hint="@string/username"
        android:layout_weight="1"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/password"
        android:layout_alignParentStart="true" />


</RelativeLayout>
